--- a/test22.html
+++ b/test22.html
@@ -291,7 +291,7 @@
 <div class="entry__img-holder card__img-holder">
 <a onclick="changeLocation(); window.open('video?e=s1e09');" href="#">
 <div class="thumb-container thumb-65">
-<img data-src="../de/img/thumbnails/s1e09.jpg" src="/web/20191214082710im_/https://miraculousladybug.to/en/img/empty.png" class="entry__img lazyload" alt=""/>
+<img data-src="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" class="entry__img lazyload" alt=""/>
 </div>
 </a>
 </div>
