--- a/test22.html
+++ b/test22.html
@@ -122,7 +122,7 @@
       <div class="card mb-3" style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" alt="...">
+      <a href="https://itsladybug.cf/watch.html?episode=3_25&language=en"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -138,7 +138,7 @@
       <div class="card mb-3" style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" alt="...">
+      <a href="https://itsladybug.cf/watch.html?episode=3_25&language=en"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
     </div>
     <div class="col-md-8">
       <div class="card-body">
