--- a/testing.html
+++ b/testing.html
@@ -235,10 +235,32 @@
 	<p></br>Season 4 is delayed to 2021 due to Covid-19</p>
 	<img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/b.jpg?raw=true" class="img-fluid" alt="Responsive image"></br>
 	</br></div>
-<button type="button" class="collapsible">Miraculous New-York Synopsis!</button>
+<button type="button" class="collapsible">Season 4 Teaser!</button>
 <div class="content">
 	<p></br>For the french-american friendship week, Marinette and her class travel to New York, THE city of superheroes! The ideal occasion for Marinette to be close to her friends and also Adrien. Indeed, he’s travelling with his father, Gabriel Agreste, who is VERY interested in a unique exposition of a precious necklace holding an eagle talon… a jewel that could hold powers coveted by Hawk Moth. Ladybug and Cat Noir will soon have to ally with the american heroes to defend them from their enemy!</p>
-<img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/Ladybug_in_NYC_Concept_2-scaled.jpg?raw=true" class="img-fluid" alt="Responsive image"></br>
+<head>
+  <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css" />
+  <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
+ <script>
+      document.addEventListener('DOMContentLoaded', () => {
+          const player = Plyr.setup('.js-player');
+      });
+  </script>
+  <video poster="assets/img/thumbnails/ep/1564173184-008-018.jpg" id="player" playsinline controls> <source src="https://ia601503.us.archive.org/9/items/season-4-teaser/Season%204%20Teaser.mp4" type="video/mp4" /> </video>
+   <!-- CUSTOM -->
+        
+<script src='player_data/polyfill.min.js'></script>
+<script src='player_data/plyr.min.js'></script>
+<script id='rendered-js'>
+          // Change the second argument to your options:
+// https://github.com/sampotts/plyr/#options
+const player = new Plyr('video', { captions: { active: true } });
+
+// Expose player so it can be used from the console
+window.player = player;
+          //# sourceURL=pen.js
+        </script>
+  <head></br>
 </br></div>
 <button type="button" class="collapsible">Miraculous Shanghai Release Date</button>
 <div class="content">
