--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 	</br></div>
 <button type="button" class="collapsible">Season 4 Official Teaser!</button>
 <div class="content">
-<head>
+	</br></br><head>
   <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css" />
   <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
  <script>
