--- a/newyorkspecial.html
+++ b/newyorkspecial.html
@@ -95,7 +95,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="https://archive.org/download/new-york-en/New%20York_EN.mkv" type="video/mp4"> </video>
+  <video poster="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" id="player" playsinline="" controls=""> <source src="https://ia801408.us.archive.org/11/items/miraculousnewyork/IMG_6585.ia.mp4" type="video/mp4"> </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
