--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html
+<!DOCTYPE html>
 <html  >
   <head>
   <!-- Site made with Mobirise Website Builder v4.12.3, https://mobirise.com -->
