--- a/watch.html
+++ b/watch.html
@@ -60,6 +60,9 @@
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://itsladybug.cf/fullepisodes.html" aria-expanded="false">Full Episodes
                     </a>
+                </li><li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/c/contact.html" aria-expanded="false">Contact us
+                    </a>
                 </li></ul>
             
         </div>
