--- a/watchfr.html
+++ b/watchfr.html
@@ -60,6 +60,9 @@
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://itsladybug.cf/fr/fullepisodes.html" aria-expanded="false">Épisodes complets
                     </a>
+                </li><li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/c/contactfr.html" aria-expanded="false">Contacter nous
+                    </a>
                 </li></ul>
             
         </div>
