--- a/watchit.html
+++ b/watchit.html
@@ -61,6 +61,9 @@
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://itsladybug.cf/it/fullepisodes.html" aria-expanded="false">Episodi completi
                     </a>
+                </li><li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="https://itsladybug.cf/c/contactit.html" aria-expanded="false">Contattaci
+                    </a>
                 </li></ul>
             
         </div>
