--- a/page80.html
+++ b/page80.html
@@ -97,6 +97,9 @@
   <li class="nav-item">
     <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Season 3</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" id="season4-tab" data-toggle="tab" href="#season4" role="tab" aria-controls="Season 4" aria-selected="false">Season 4</a>
+  </li>
 </ul><div class="tab-content cid-rXAJ5IF6V2" id="custom-html-3h" data-rv-view="359">
   <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
   <style>
@@ -728,6 +731,319 @@
   </div></div></main>
   </div>
   <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+  <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 260px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+    <!-- Custom styles for this template -->
+    <link href="album.css" rel="stylesheet">
+    <main role="main">
+
+  <div class="album py-5 bg-light">
+    <div class="container">
+
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="chameleon.eng.html"><img src="assets/images/s3e01-700x393.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="chameleon.eng.html">Chameleon</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="animaestro.eng.html"><img src="assets/images/s3e02-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="animaestro.eng.html">Animaestro</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="bakerix.eng.html"><img src="assets/images/s3e03-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="bakerix.eng.html">Bakerix</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="backwarder.eng.html"><img src="assets/images/s3e04-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="backwarder.eng.html">Backwarder</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="reflekdoll.eng.html"><img src="assets/images/s3e05-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="reflekdoll.eng.html">Reflekdoll</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="weredad.eng.html"><img src="assets/images/s3e06-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="weredad.eng.html">Weredad</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="silencer.eng.html"><img src="assets/images/s3e07-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="silencer.eng.html">Silencer</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="onichan.eng.html"><img src="assets/images/s3e08-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="onichan.eng.html">Onichan</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="miraculer.eng.html"><img src="assets/images/s3e09-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="miraculer.eng.html">Miraculer</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="oblivio.eng.html"><img src="assets/images/s3e10-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="oblivio.eng.html">Oblivio</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="desperada.eng.html"><img src="assets/images/s3e11-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="desperada.eng.html">Desperada</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="chrismaster.eng.html"><img src="assets/images/s3e12-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="chrismaster.eng.html">Chris Master</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="startrain.eng.html"><img src="assets/images/s3e13-700x394.png" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="startrain.eng.html">Startrain</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="kwamibuster.eng.html"><img src="assets/images/s3e14-640x363.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="kwamibuster.eng.html">Kwami Buster</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="feast.eng.html"><img src="assets/images/s3e15-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="feast.eng.html">Feast</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="gamer2.eng.html"><img src="assets/images/s3e16-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="gamer2.eng.html">Gamer 2.0</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="stormyweather2.eng.html"><img src="assets/images/s3e17-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="stormyweather2.eng.html">Stormy Weather 2</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="ikarigozen.eng.html"><img src="assets/images/s3e18-1-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="ikarigozen.eng.html">Ikari Gozen</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="timetagger.eng.html"><img src="assets/images/s3e19-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="timetagger.eng.html">Timetagger</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="partycrasher.eng.html"><img src="assets/images/s3e20-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="partycrasher.eng.html">Party Crasher</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="thepuppeteer2.eng.html"><img src="assets/images/s3e21-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="thepuppeteer2.eng.html">The Puppeteer 2</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="catblanc.eng.html"><img src="assets/images/s3e22-700x393.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="catblanc.eng.html">Cat Blanc</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="felix.eng.html"><img src="assets/images/s3e23-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="felix.eng.html">Felix</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="ladybug.eng.html"><img src="assets/images/s3e24-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="ladybug.eng.html">Ladybug</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="hearthunter.eng.html"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="miraclequeen.eng.html"><img src="assets/images/s3e26-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="miraclequeen.eng.html">Miracle Queen (The Battle of The Miraculous - Part 2)</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+  </div></div></div></main>
+  </div>
+  <div class="tab-pane fade" id="season4" role="tabpanel" aria-labelledby="season4-tab">
   <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
