--- a/fullepisodes.html
+++ b/fullepisodes.html
@@ -91,6 +91,9 @@
   <li class="nav-item">
     <a class="nav-link" id="contact-tab" data-toggle="tab" href="#season3" role="tab" aria-controls="contact" aria-selected="false">Season 3</a>
   </li>
+	<li class="nav-item">
+    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#season4" role="tab" aria-controls="contact" aria-selected="false">Season 4</a>
+  </li>
    <li class="nav-item">
     <a class="nav-link" id="contact-tab" data-toggle="tab" href="#specialepisodes" role="tab" aria-controls="contact" aria-selected="false">Special Episodes</a>
   </li>
@@ -1037,6 +1040,44 @@
         </div>
   </div></div></div></main>
   </div>
+		       <div class="tab-pane fade" id="season4" role="tabpanel" aria-labelledby="Season 4">
+  <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 260px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+    <!-- Custom styles for this template -->
+    <link href="album.css" rel="stylesheet">
+    <main role="main">
+
+  <div class="album py-5 bg-light">
+    <div class="container">
+	<div class="row">
+	 <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href=""><img src="/assets/images/s4e6.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="">Monster Fu</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S4E6 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>  
+    </div>
+  </div></div></main>
+  </div>
                 <div class="tab-pane fade" id="specialepisodes" role="tabpanel" aria-labelledby="profile-tab">
   <style>
       .bd-placeholder-img {
@@ -1068,7 +1109,7 @@
             <div class="card-body">
               <p class="card-text"><a href="https://itsladybug.cf/newyorkspecial.html">New-York Special</a></p>
               <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">22 mins</small>
+                <small class="text-muted">50 mins</small>
               </div>
             </div>
           </div>
@@ -1079,7 +1120,7 @@
             <div class="card-body">
               <p class="card-text"><a href="">Shanghai Special</a></p>
               <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">22 mins</small>
+                <small class="text-muted">50 mins</small>
               </div>
             </div>
           </div>
