--- a/index.html
+++ b/index.html
@@ -200,6 +200,32 @@ window.player = player;
 	<p></br>To join Adrien in Shanghai, Marinette visits her Uncle Wang to celebrate his birthday. However, as soon as she arrives in China, she gets her bag with Tikki stolen, whom she needs to secretly transform into Ladybug! Without money and alone in the immense city, Marinette accepts the help of a young and resourceful girl, Fei. The two girls will ally and discover the existence of a new magical jewel, the Prodigious, who Hawkmoth, also in Shanghai, has wished to possess for a long time…</p>
 <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/Shanghai-Poster.jpg?raw=true" class="img-fluid" alt="Responsive image"></br>
 </br></div>
+<button type="button" class="collapsible">Miraculous World Shanghai Official Trailer!</button>
+<div class="content">
+	</br></br><head>
+  <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css" />
+  <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
+ <script>
+      document.addEventListener('DOMContentLoaded', () => {
+          const player = Plyr.setup('.js-player');
+      });
+  </script>
+  <video poster="" id="player" playsinline controls> <source src="https://archive.org/download/miraculous-world-shanghai-teaser-the-legend-of-ladydragon/MIRACULOUS%20WORLD%20SHANGHAI%20-%20TEASER%20The%20Legend%20of%20Ladydragon.mp4" type="video/mp4" /> </video>
+   <!-- CUSTOM -->
+        
+<script src='player_data/polyfill.min.js'></script>
+<script src='player_data/plyr.min.js'></script>
+<script id='rendered-js'>
+          // Change the second argument to your options:
+// https://github.com/sampotts/plyr/#options
+const player = new Plyr('video', { captions: { active: true } });
+
+// Expose player so it can be used from the console
+window.player = player;
+          //# sourceURL=pen.js
+        </script>
+  <head></br>
+</br></div>
 <button type="button" class="collapsible">The Miraculous Movie Release Date!</button>
 <div class="content">
 	<p></br>The Miraculous Movie will air at the end of 2021.</p>
