--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 <button type="button" class="collapsible">Season 4 Release Date!</button>
 <div class="content">
-	<p></br>Season 4 is delayed to September 2021 due to Covid-19</p>
+	<p></br>Season 4 episode 6 will be released this month, 23th march on Gloob!</p>
 	<img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/b.jpg?raw=true" class="img-fluid" alt="Responsive image"></br>
 	</br></div>
 <button type="button" class="collapsible">Season 4 Official Teaser!</button>
@@ -193,7 +193,7 @@ window.player = player;
 </br></div>
 <button type="button" class="collapsible">Miraculous Shanghai Release Date</button>
 <div class="content">
-	<p></br>The 1 hour Miraculous Shanghai, Ladydragon Special is supposed to be out released April 2021</p>
+	<p></br>The 1 hour Miraculous Shanghai, Ladydragon Special will be out on April 2th on Family channel canada and 4th of April on TF1 France</p>
 </div>
 <button type="button" class="collapsible">Miraculous Shanghai Synopsis!</button>
 <div class="content">
