--- a/fullepisodes.html
+++ b/fullepisodes.html
@@ -1109,18 +1109,18 @@
             <div class="card-body">
               <p class="card-text"><a href="https://itsladybug.cf/newyorkspecial.html">New-York Special</a></p>
               <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">50 mins</small>
+                <small class="text-muted">1 hour</small>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm bg-white rounded">
-            <a href=""><img src="https://itsladybug.cf/img/Eb3ANjqXsAE-L6F.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <a href="itsladybug.cf/shanghaispecial.html"><img src="https://itsladybug.cf/img/Eb3ANjqXsAE-L6F.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
-              <p class="card-text"><a href="">Shanghai Special</a></p>
+              <p class="card-text"><a href="itsladybug.cf/shanghaispecial.html">Shanghai Special</a></p>
               <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">50 mins</small>
+                <small class="text-muted">1 hour</small>
               </div>
             </div>
           </div>
