--- a/page80.html
+++ b/page80.html
@@ -74,15 +74,11 @@
     </nav>
 </section>
   <section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><img src="assets/images/1562457908-2114x594.jpg" class="img-fluid cid-rXQAuUnO2M" alt="Responsive image" id="custom-html-4g" data-rv-view="261"><div class="alert alert-success p-3 bg-dark cid-rXQAuUnO2M" role="alert" id="custom-html-4g" data-rv-view="261">
-  <h4 class="alert-heading">Frozen 2</h4>
-  <p></p>
-  <hr>
-  <p class="mb-0">Anna, Elsa, Kristoff, Olaf and Sven leave Arendelle to travel to an ancient, autumn-bound forest of an enchanted land. They set out to find the origin of Elsa's powers in order to save their kingdom.</p>
 </div>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><div class="container cid-rXAJ5IF6V2" id="custom-html-3h" data-rv-view="359">
+<br><section class="engine"><a href="https://mobirise.info/j">website templates</a></section><div class="container cid-rXAJ5IF6V2" id="custom-html-3h" data-rv-view="359">
     <div class="row">
-      <h1><br><br><br><br><br>Full episodes<br><br></h1>
+      <h1><br><br><br>Full episodes<br><br></h1>
   </div>
   <div class="more_options" style="margin-bottom:23px;margin-left:10px;margin-right:10px;">
          <p style="margin-top: 10px;margin-bottom: 0px;">SELECT LANGUAGE: <br>
