--- a/fullepisodes.html
+++ b/fullepisodes.html
@@ -1066,9 +1066,9 @@
 	<div class="row">
 	 <div class="col-md-4">
           <div class="card mb-4 shadow-sm bg-white rounded">
-            <a href=""><img src="/assets/images/s4e6.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en"><img src="/assets/images/s4e6.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
-              <p class="card-text"><a href="">Monster Fu</a></p>
+              <p class="card-text"><a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en">Monster Fu</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S4E6 | 22 mins</small>
               </div>
