--- a/index.html
+++ b/index.html
@@ -661,11 +661,11 @@ function showSlides(n) {
       <div class="row">
          <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="https://itsladybug.cf/watch.html?episode=3_23&language=en"><img src="assets/images/s3e23-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en"><img src="assets/images/406.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=3_23&language=en">Felix<br><br></a></p>
+              <p class="card-text"><a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en">Furious Fu<br><br></a></p>
               <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">S3E23 | 22 mins</small>
+                <small class="text-muted">S4E06 | 22 mins</small>
               </div>
             </div>
           </div>
