--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@ function showSlides(n) {
       <div class="row">
          <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en"><img src="assets/images/406.jpg" class="img-fluid" alt="Responsive image" title>
+            <a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en"><img src="assets/images/406.png" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
               <p class="card-text"><a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en">Furious Fu<br><br></a></p>
               <div class="d-flex justify-content-between align-items-center">
@@ -737,7 +737,7 @@ a:active {
 <br>
 <div class="footer">
   <p>© 2020 ZAG, Method, Toei Animation, SAMG Animation, Disney, TF1, Globosat, SK Broadband. All Rights Reserved.
- <br>Any problems? Contact us : miraculous.fans.20@gmail.com<br>
+ <br>Any problems? Contact us<br> Follow us on Instagram <a href="https://www.instagram.com/miraculous_fans.20/">@miraculous_fans.20</a> and <a href="https://www.instagram.com/miraculoustoons/">@miraculoustoons</a> 
   </p>
   <br>
 </div>
