--- a/shanghailive.html
+++ b/shanghailive.html
@@ -79,8 +79,8 @@
   <h1><br><br>Miraculous World Shanghai : The Legend of Ladydragon</h1>
    <hr>
   <p></p>
-<video data-html5-video="" preload="metadata" muted="true" src="blob:https://www.tntendirect.com/84a1a742-9735-4240-ba1c-3aad54866ccb"></video>
 <section class="mbr-section content8">
+	<video data-html5-video="" poster="http://www.freeintertv.com/images/tv/tf1_live.jpg" preload="metadata" src="blob:http://www.freeintertv.com/7501c7cd-02d8-4a46-b27c-89442a777955"><style class="clappr-style">[data-html5-video]{position:absolute;height:100%;width:100%;display:block}</style></video>
 
     
 
