--- a/fullepisodes.html
+++ b/fullepisodes.html
@@ -1074,6 +1074,18 @@
               </div>
             </div>
           </div>
+        </div> 
+     <div class="row">
+	 <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="https://itsladybug.cf/watch.html?episode=4_01&language=en"><img src="/assets/images/401.png" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_01&language=en">Truth</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S4E1 | 22 mins</small>
+              </div>
+            </div>
+          </div>
         </div>  
     </div>
   </div></div></main>
