--- a/fullepisodes.html
+++ b/fullepisodes.html
@@ -1064,21 +1064,10 @@
   <div class="album py-5 bg-light">
     <div class="container">
 	<div class="row">
+    <div class="row">
 	 <div class="col-md-4">
           <div class="card mb-4 shadow-sm bg-white rounded">
-            <a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en"><img src="/assets/images/s4e6.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
-            <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en">Monster Fu</a></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">S4E6 | 22 mins</small>
-              </div>
-            </div>
-          </div>
-        </div> 
-     <div class="row">
-	 <div class="col-md-4">
-          <div class="card mb-4 shadow-sm bg-white rounded">
-            <a href="https://itsladybug.cf/watch.html?episode=4_01&language=en"><img src="/assets/images/12085832.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <a href="https://itsladybug.cf/watch.html?episode=4_01&language=en"><img src="/assets/images/401.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
               <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_01&language=en">Truth</a></p>
               <div class="d-flex justify-content-between align-items-center">
@@ -1087,6 +1076,17 @@
             </div>
           </div>
         </div>  
+	 <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en"><img src="/assets/images/406.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en">Monster Fu</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S4E6 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
   </div></div></main>
   </div>
