--- a/index.html
+++ b/index.html
@@ -659,6 +659,17 @@ function showSlides(n) {
     <div class="container">
 
       <div class="row">
+	 <div class="col-md-4">
+          <div class="card mb-4 shadow-sm bg-white rounded">
+            <a href="https://itsladybug.cf/watch.html?episode=4_01&language=en"><img src="/assets/images/401.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_01&language=en">Truth</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S4E1 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>  
          <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
             <a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en"><img src="assets/images/406.png" class="img-fluid" alt="Responsive image" title>
@@ -666,17 +677,6 @@ function showSlides(n) {
               <p class="card-text"><a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en">Furious Fu<br><br></a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S4E06 | 22 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="https://itsladybug.cf/watch.html?episode=3_25&language=en"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
-            <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=3_25&language=en">Heart Hunter (The Battle of The Miraculous - Part 1)<br></a></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">S3E25 | 22 mins</small>
               </div>
             </div>
           </div>
