--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		<select name="forma" onchange="location = this.value;">
  <option>English</option>
  <option value="https://itsladybug.cf/fr"> French</option>
-      <option value="https://itsladybug.cf/it"> italian</option>
+      <option value="https://itsladybug.cf/it"> Italian</option>
 </select>
                   </a></p>
                 
@@ -114,10 +114,10 @@
 		<h1>&nbsp;Special episodes!<br><br></h1>
 <div class="card-deck">
 	<div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-    <img src="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" class="card-img-top" alt="..." title>
+    <img src="https://itsladybug.cf/img/Eb3ANjqXsAE-L6F.jpg" class="card-img-top" alt="..." title>
     <div class="card-body">
-      <p class="card-text"><a href="https://itsladybug.cf/newyorkspecial">Miraculous World, New York, United Heroes</a></p>
-      <p class="card-text"><small class="text-muted">1 Hour</small></p>
+      <p class="card-text"><a href="https://itsladybug.cf/shanghaispecial.html">Miraculous World, Shanghai</a></p>
+      <p class="card-text"><small class="text-muted">Sunday, April 4 on Tfou | 1 Hour</small></p>
     </div>
   </div>
 </div>
