--- a/shanghaispecial.html
+++ b/shanghaispecial.html
@@ -86,7 +86,7 @@
           const player = Plyr.setup('.js-player');
       });
   </script>
-  <video poster="https://itsladybug.cf/img/Eb3ANjqXsAE-L6F.jpg" id="player" playsinline="" controls=""> <source src="https://archive.org/download/miraculous-world-shanghai-teaser-the-legend-of-ladydragon/MIRACULOUS%20WORLD%20SHANGHAI%20-%20TEASER%20The%20Legend%20of%20Ladydragon.mp4" type="video/mp4"> </video>
+  <video poster="https://itsladybug.cf/img/Eb3ANjqXsAE-L6F.jpg" id="player" playsinline="" controls=""> <source src="https://vk.com/doc-192921485_595926479" type="video/mp4"> </video>
    <!-- CUSTOM -->
         
 <script src="player_data/polyfill.min.js"></script>
