--- a/shanghaisubs.html
+++ b/shanghaisubs.html
@@ -74,8 +74,51 @@
         </div>
     </nav>
   </section>
-<video x-webkit-airplay="allow" preload="metadata" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: contain; transition: filter 0.2s linear 0s; min-height: auto; max-height: none; min-width: auto; max-width: none; filter: none;" src="blob:https://liveschauen.com/8d6f2f5c-8a62-4dc4-b8ab-a0715ef8da88"></video>
-	<script src="assets/web/assets/jquery/jquery.min.js"></script>
+	
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAtDb3XLd" id="custom-html-1w" data-rv-view="281">
+  <h1><br><br>Miraculous World Shanghai : The Legend of Ladydragon</h1>
+   <hr>
+  <p></p>
+<link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
+  <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
+ <script>
+      document.addEventListener('DOMContentLoaded', () => {
+          const player = Plyr.setup('.js-player');
+      });
+  </script>
+  <video poster="https://itsladybug.cf/img/Eb3ANjqXsAE-L6F.jpg" id="player" playsinline="" controls=""> <source src="https://drive.google.com/file/d/1YqteImhmLRaeoTBOin3Rnbs5ACBMrnZ9/view?usp=drivesdk" type="video/mp4"> </video>
+   <!-- CUSTOM -->
+        
+<script src="player_data/polyfill.min.js"></script>
+<script src="player_data/plyr.min.js"></script>
+<script id="rendered-js">
+          // Change the second argument to your options:
+// https://github.com/sampotts/plyr/#options
+const player = new Plyr('video', { captions: { active: true } });
+
+// Expose player so it can be used from the console
+window.player = player;
+          //# sourceURL=pen.js
+        </script>
+<section class="mbr-section content8">
+
+    
+
+    <div class=".container-fluid">
+        <div class="media-container-fluid title">
+            <div class="p-3 my-3 bg-dark text-white">
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">Download</a></div>
+</div></div></div></section>
+<script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
+<div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
+  <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
+<div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
+  <script async="async" data-cfasync="false" src="//wgat5ln2wly8.com/baa6c23cdf01effd24dde795c0d1c464/invoke.js"></script>
+<div id="container-baa6c23cdf01effd24dde795c0d1c464"></div>
+  </div>
+
+
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
