--- a/shanghaisubs.html
+++ b/shanghaisubs.html
@@ -79,27 +79,65 @@
   <h1><br><br>Miraculous World Shanghai : The Legend of Ladydragon</h1>
    <hr>
   <p></p>
-<link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
-  <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
- <script>
-      document.addEventListener('DOMContentLoaded', () => {
-          const player = Plyr.setup('.js-player');
-      });
-  </script>
-  <video poster="https://itsladybug.cf/img/Eb3ANjqXsAE-L6F.jpg" id="player" playsinline="" controls=""> <source src="https://drive.google.com/file/d/1YqteImhmLRaeoTBOin3Rnbs5ACBMrnZ9/view?usp=drivesdk" type="video/mp4"> </video>
-   <!-- CUSTOM -->
-        
-<script src="player_data/polyfill.min.js"></script>
-<script src="player_data/plyr.min.js"></script>
-<script id="rendered-js">
-          // Change the second argument to your options:
-// https://github.com/sampotts/plyr/#options
-const player = new Plyr('video', { captions: { active: true } });
-
-// Expose player so it can be used from the console
-window.player = player;
-          //# sourceURL=pen.js
-        </script>
+{
+  "ns": "gd",
+  "el": "embedded",
+  "cpn": "Dt9bbeCnUn_tmPjl",
+  "docid": "1YqteImhmLRaeoTBOin3Rnbs5ACBMrnZ9",
+  "ver": 2,
+  "cmt": "0",
+  "fmt": "18",
+  "fs": "1",
+  "rt": "23.009",
+  "euri": "https://drive.google.com/",
+  "lact": 1,
+  "cl": "366123561",
+  "mos": 0,
+  "state": "45",
+  "volume": 100,
+  "cbr": "Chrome",
+  "cbrver": "89.0.4389.114",
+  "c": "WEB_EMBEDDED_PLAYER",
+  "cver": "1.20210331.1.0",
+  "cplayer": "UNIPLAYER",
+  "cos": "Windows",
+  "cosver": "10.0",
+  "cplatform": "DESKTOP",
+  "hl": "fr_FR",
+  "cr": "LB",
+  "len": "3238.046",
+  "fexp": "23940237,23969934,23983296,24001373,24006795,24007246,24012117,24016852,24020952",
+  "vis": "2",
+  "vct": "0.000",
+  "vd": "3238.046",
+  "vpl": "",
+  "vbu": "0.000-0.952",
+  "vpa": "1",
+  "vsk": "0",
+  "ven": "0",
+  "vpr": "1",
+  "vrs": "4",
+  "vns": "1",
+  "vec": "null",
+  "vemsg": "",
+  "vvol": "1",
+  "vdom": "1",
+  "vsrc": "1",
+  "vw": "1366",
+  "vh": "768",
+  "relative_loudness": "NaN",
+  "optimal_format": "360p",
+  "user_qual": "auto",
+  "debug_videoId": "1YqteImhmLRaeoTBOin3Rnbs5ACBMrnZ9",
+  "0sz": false,
+  "op": "",
+  "yof": false,
+  "dis": "",
+  "gpu": "ANGLE_(Intel(R)_HD_Graphics_520_Direct3D11_vs_5_0_ps_5_0)",
+  "cgr": true,
+  "debug_playbackQuality": "medium",
+  "debug_date": "Sun Apr 04 2021 19:32:40 GMT+0300 (heure d’été d’Europe de l’Est)"
+}
 <section class="mbr-section content8">
 
     
