--- a/shanghaisubs.html
+++ b/shanghaisubs.html
@@ -79,7 +79,7 @@
   <h1><br><br>Miraculous World Shanghai : The Legend of Ladydragon</h1>
    <hr>
   <p></p>
-https://drive.google.com/file/d/1YqteImhmLRaeoTBOin3Rnbs5ACBMrnZ9/view?usp=sharing
+<iframe src="https://drive.google.com/file/d/1YqteImhmLRaeoTBOin3Rnbs5ACBMrnZ9/preview" width="1820" height="720"></iframe>
 	
 <section class="mbr-section content8">
 
