--- a/testing.html
+++ b/testing.html
@@ -1114,6 +1114,20 @@
             </div>
           </div>
         </div>
+		      <a style="border-radius:4px;" href="watchm.html?e=11">
+            <div style="margin:15px;" class="episode" data-uia="episode">
+                <div class="comingSoon">NEW</div>
+                <figure style="position:relative" class="episode-thumbnail" data-uia="episode-thumbnail">
+                    <span class="episode-thumbnail-gradient" style="background: linear-gradient(to bottom, transparent 70%, rgba(0,0,0,0.3) 100%);position:absolute;bottom:0;pointer-events:none;left:0;width:100%;height:100%"></span>
+                    <img style="width:100%" class="episode-thumbnail-image" data-uia="episode-thumbnail-image" alt="" src="
+img/Shanghai.jpg" loading="lazy">
+                </figure>
+                <div class="episode-metadata">
+                    <!--<span style="float:right;" class="episode-runtime" data-uia="episode-runtime">22m</span>-->
+                    <h3 style="color:white;font-family: 'PT Sans', sans-serif;font-weight:800;font-size:15px;" class="episode-title" data-uia="episode-title"><span class="epindexanddur">52m</span><br>Shanghai: The Legend of Lady Dragon</h3>
+                </div>
+                <!--<p class="epsiode-synopsis" data-uia="episode-synopsis">.</p>-->
+        </div></a>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm bg-white rounded">
             <a href=""><img src="https://itsladybug.cf/img/Eb3ANjqXsAE-L6F.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
