--- a/testing.html
+++ b/testing.html
@@ -1130,6 +1130,9 @@ img/Shanghai.jpg" loading="lazy">
         </div></a>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm bg-white rounded">
+		      <div class="comingSoon">NEW</div>
+                <figure style="position:relative" class="episode-thumbnail" data-uia="episode-thumbnail">
+                    <span class="episode-thumbnail-gradient" style="background: linear-gradient(to bottom, transparent 70%, rgba(0,0,0,0.3) 100%);position:absolute;bottom:0;pointer-events:none;left:0;width:100%;height:100%"></span>
             <a href=""><img src="https://itsladybug.cf/img/Eb3ANjqXsAE-L6F.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
               <p class="card-text"><a href="">Shanghai Special</a></p>
