--- a/testing.html
+++ b/testing.html
@@ -1106,7 +1106,8 @@
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm bg-white rounded">
             <a href="https://itsladybug.cf/newyorkspecial.html"><img src="https://itsladybug.cf/img/Eb3ANjhWkAEJzVh.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
-            <div class="card-body">
+            <span class="badge badge-danger">New Special</span>
+		      <div class="card-body">
               <p class="card-text"><a href="https://itsladybug.cf/newyorkspecial.html">New-York Special</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">22 mins</small>
