--- a/testing.html
+++ b/testing.html
@@ -1119,7 +1119,7 @@
 		      <div class="card bg-dark text-white">
             <a href=""><img src="https://itsladybug.cf/img/Eb3ANjqXsAE-L6F.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
   <div class="card-img-overlay">
-    <h5 class="card-title">New</h5>
+    &nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;	&nbsp;<span class="badge badge-danger">New</span>
   </div>
 </div>
             <div class="card-body">
