--- a/test22.html
+++ b/test22.html
@@ -77,6 +77,7 @@
 <div class="row">
 <div class="col" style="padding: 0;">
 <div>
+   <div id="respond" class="comment-respond title-wrap--line" style="    margin-top: -40px;">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta3/js/bootstrap.bundle.min.js"></script>
 <script src="/fr/assets/js/script.min.js"></script>
