--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@ function showSlides(n) {
       <div class="row">
 	      <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en"><img src="assets/images/402.png" class="img-fluid" alt="Responsive image" title>
+            <a href="https://itsladybug.cf/watch.html?episode=4_06&language=en"><img src="assets/images/402.png" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
               <p class="card-text"><a href="https://itsladybug.cf/watchfr.html?episode=4_02&language=en">Lie<br><br></a></p>
               <div class="d-flex justify-content-between align-items-center">
