--- a/index.html
+++ b/index.html
@@ -738,9 +738,7 @@ a:active {
 <br>
 <div class="footer">
   <p>© 2020 ZAG, Method, Toei Animation, SAMG Animation, Disney, TF1, Globosat, SK Broadband. All Rights Reserved.
- <br>Any problems? Contact us<br> Follow us on Instagram <a href="https://www.instagram.com/miraculous_fans.20/">@miraculous_fans.20</a>
-  </p>
-  <br>
+ <br>Any problems? Contact us<br>Follow us on Instagram <a href="https://www.instagram.com/miraculous_fans.20/">@miraculous_fans.20</a></p>
 </div>
 
 </body>
