--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ function showSlides(n) {
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
             <a href="https://itsladybug.cf/watch.html?episode=4_06&language=en"><img src="assets/images/402.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/watchfr.html?episode=4_02&language=en">Lie<br><br></a></p>
+              <p class="card-text"><a href="https://itsladybug.cf/watchfr.html?episode=4_02&language=en">Lie</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S4E02 | 22 mins</small>
               </div>
@@ -685,7 +685,7 @@ function showSlides(n) {
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
             <a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en"><img src="assets/images/406.png" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en">Furious Fu<br><br></a></p>
+              <p class="card-text"><a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en">Furious Fu</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S4E06 | 22 mins</small>
               </div>
