--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@ function showSlides(n) {
 	<hr style="width:85%;height:3px" color="grey"><br>
 <div class="container">
     <div class="row">
-	<h1>&nbsp;Latest episodes!<br></h1>
+	<h1>&nbsp;Latest Episodes!<br></h1>
       </div>
   </div>
     <!-- Custom styles for this template -->
@@ -659,39 +659,38 @@ function showSlides(n) {
     <div class="container">
 
       <div class="row">
-	      <div class="col-md-4">
+         <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="https://itsladybug.cf/watch.html?episode=4_06&language=en"><img src="assets/images/402.jpg" class="img-fluid" alt="Responsive image" title>
+            <a href="https://itsladybug.cf/watch.html?episode=4_02&language=en"><img src="https://itsladybug.cf/assets/images/402.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/watchfr.html?episode=4_02&language=en">Lie</a></p>
+              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_06&language=en">Lie<br><br></a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S4E02 | 22 mins</small>
               </div>
             </div>
           </div>
         </div>
-	 <div class="col-md-4">
-          <div class="card mb-4 shadow-sm bg-white rounded">
-            <a href="https://itsladybug.cf/watch.html?episode=4_01&language=en"><img src="/assets/images/401.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+            <a href="https://itsladybug.cf/watch.html?episode=4_01&language=en"><img src="https://itsladybug.cf/assets/images/401.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_01&language=en">Truth</a></p>
+              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_01&language=en">Truth<br></a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S4E01 | 22 mins</small>
               </div>
             </div>
           </div>
-        </div>  
-         <div class="col-md-4">
+        </div>
+        <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en"><img src="assets/images/406.png" class="img-fluid" alt="Responsive image" title>
+            <a href="https://itsladybug.cf/watch.html?episode=4_06&language=en"><img src="https://itsladybug.cf/assets/images/406.jpg" class="img-fluid" alt="Responsive image" title>
             <div class="card-body">
-              <p class="card-text"><a href="https://itsladybug.cf/watchfr.html?episode=4_06&language=en">Furious Fu</a></p>
+              <p class="card-text"><a href="https://itsladybug.cf/watch.html?episode=4_06&language=en">Furious Fu</a></p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">S4E06 | 22 mins</small>
               </div>
             </div>
           </div>
-        </div>
 	<head>
 <style>
 /* unvisited link */
@@ -717,7 +716,7 @@ a:active {
 </head>
 <body>
 
- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://itsladybug.cf/fullepisodes.html">SHOW ALL</a>
+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://itsladybug.cf/fullepisodes.html">SHOW ALL</a>
 
 </body>	  
         </div></div></div></div></main></div>
