--- a/402subs.html
+++ b/402subs.html
@@ -90,7 +90,7 @@
   <source src="https://vk.com/doc-120991336_593576673" type="video/mp4" />
 
   <!-- Captions are optional -->
-  <track kind="captions" label="English captions" src="https://itsladybug.cf/final%20(1).str" srclang="en" default />
+  <track kind="captions" label="English captions" src="https://itsladybug.cf/402.vtt" srclang="en" default />
 </video>
    <!-- CUSTOM -->
         
