--- a/402sub.html
+++ b/402sub.html
@@ -78,7 +78,24 @@
 <section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAtDb3XLd" id="custom-html-1w" data-rv-view="281">
   <h1><br><br>Lie</h1>
    <hr>
-  <p>Season 4 episode 2</p>
+  <p>Season 4 episode 2<br>
+	  English subtitles thanks to:
+@thedonutxd
+@victoria_frdl
+@bvginett
+@x._fluff_.x
+@papillon_gabrielagreste
+@mayasagrr
+@chat_blog009
+@its_marichat
+@zarahevabovic
+@thaneetea_
+@adrinette_for_ever
+@wayzz_world
+@miraculous_toons
+@miraculorime
+@creator_freak  
+	</p>
 <link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
   <script src="https://cdn.plyr.io/3.5.6/plyr.js"></script>
  <script>
